[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/play_area/AI/GameController.gd" type="Script" id=1]
[ext_resource path="res://assets/textures/Images/magic.webp" type="Texture" id=2]
[ext_resource path="res://Scenes/play_area/AI/DrawCardButton.gd" type="Script" id=3]

[node name="Node2D" type="Node2D"]
position = Vector2( -7.49153, -1.87288 )
scale = Vector2( 2.01728, 1.79527 )
script = ExtResource( 1 )

[node name="Battlefield" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="Battlefield"]
margin_left = 3.85211
margin_top = 0.522827
margin_right = 43.8521
margin_bottom = 40.5228
rect_scale = Vector2( 25.5083, 14.9811 )
color = Color( 0.427451, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Library" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Library"]
position = Vector2( 89, 490 )
scale = Vector2( 0.554725, 0.6 )
texture = ExtResource( 2 )

[node name="Graveyard" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Graveyard"]
position = Vector2( 948.903, 490 )
scale = Vector2( 0.555, 0.6 )
texture = ExtResource( 2 )

[node name="CountdownTimer" type="Timer" parent="."]
autostart = true

[node name="StartDisplayTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="CountdownLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 358.437
margin_top = 223.935
margin_right = 398.437
margin_bottom = 237.935
rect_scale = Vector2( 6.58755, 6.14859 )
text = " 3"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DrawCardButton" type="Button" parent="."]
margin_left = 63.9497
margin_top = 571.32
margin_right = 153.95
margin_bottom = 591.32
rect_scale = Vector2( 0.546399, 0.840737 )
text = "Draw Card "
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HandArea" type="Node2D" parent="DrawCardButton"]
position = Vector2( -267.044, -680.606 )
scale = Vector2( 2.16449, 1.18148 )

[node name="ColorRect" type="ColorRect" parent="DrawCardButton/HandArea"]
margin_left = 195.831
margin_top = 410.553
margin_right = 234.831
margin_bottom = 450.553
rect_scale = Vector2( 16.0109, 4.24523 )
color = Color( 0.223529, 0.0156863, 0.0156863, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlockInput" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 25.601, 15.0316 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="CountdownTimer" to="." method="_on_CountdownTimer_timeout"]
[connection signal="timeout" from="StartDisplayTimer" to="." method="_on_StartDisplayTimer_timeout"]
